--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind project for Future Fibers
 
 publish_to: 'none'
 
-version: 1.4.5+255
+version: 1.4.7+257
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -20,13 +20,16 @@ dependencies:
   #  smartwind_login:
   #    path: ../../smartwind_flutter_packages/smartwind_login
 
+  deebugee_plugin:
+    path: ../../../../DeeBugee/deebugee_plugin
+
 
   #  firebase------------------------------------------
-  firebase_core: ^2.9.0
-  firebase_crashlytics: ^3.1.0
-  firebase_auth: ^4.4.0
-  firebase_messaging: ^14.4.0
-  firebase_database: ^10.1.0
+  firebase_core: ^2.13.0
+  firebase_crashlytics: ^3.3.1
+  firebase_auth: ^4.6.1
+  firebase_messaging: ^14.6.1
+  firebase_database: ^10.2.1
   #  firebase_auth_platform_interface: ^6.13.0
   #  firebase_core_web: ^2.3.0
   #  --------------------------------------------------
@@ -34,20 +37,20 @@ dependencies:
 
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
-  flutter_pdfview: ^1.3.0
+  flutter_pdfview: ^1.3.1
   flutter_inappwebview: ^5.7.2+3
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
-  dio: ^5.1.1
+  dio: ^5.1.2
   percent_indicator: ^4.2.3
   nfc_manager: ^3.2.0
-  shared_preferences: ^2.1.0
+  shared_preferences: ^2.1.1
   animations: ^2.0.7
   #  jwt_decode: ^0.3.1
-  webview_flutter: ^4.0.7
+  webview_flutter: ^4.2.0
   permission_handler: ^10.2.0
-  path_provider: ^2.0.14
+  path_provider: ^2.0.15
   hex: ^0.2.0
   package_info_plus: ^3.1.0
   #  dropdown_search: ^5.0.6
@@ -57,30 +60,25 @@ dependencies:
   cached_network_image: ^3.2.3
   video_player: ^2.6.1
   group_list_view: ^1.1.1
-  data_table_2: ^2.4.2
+  data_table_2: ^2.5.0
 
 
 
-  json_annotation: ^4.8.0
+  json_annotation: ^4.8.1
 
 
   hive: ^2.2.3
-  #  hive_flutter: ^1.1.0
   uuid: ^3.0.7
 
   splash_screen_view: ^3.0.0
   decorated_icon: ^1.2.1
-  #  ota_update: ^4.0.1
   timeline_tile: ^2.0.0
 
   dotted_border: ^2.0.0+3
-  #  socket_io_client: ^2.0.1
   file_picker: ^5.2.7
   universal_html: ^2.2.1
-  #  dropdown_button2: ^2.0.0
   pdfx: ^2.3.0
-  #  textfield_search: ^0.10.0
-  searchfield: ^0.7.6
+  searchfield: ^0.8.0
   csv: ^5.0.1
   pdf_render: ^1.3.8
 
@@ -95,7 +93,7 @@ dependencies:
 
   random_password_generator: ^0.2.1
   #  flutter_slidable: ^2.0.0
-  intl: ^0.17.0
+  intl: ^0.18.1
   app_settings: ^4.2.0
   contextmenu: ^3.0.0
   #  badges: ^3.0.3
@@ -115,14 +113,14 @@ dev_dependencies:
   dependency_validator: ^3.2.2
   hive_generator: ^2.0.0
   json_serializable:
-  build_runner: ^2.3.3
+  build_runner: ^2.4.4
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  build_web_compilers: ^3.2.7
+  build_web_compilers: ^4.0.3
   flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.7.0
+  dart_code_metrics: ^5.7.4
 
 flutter:
 
