--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=debug
-flutter.versionCode=257
+flutter.buildMode=release
+flutter.versionCode=261
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.4.7
+flutter.versionName=1.6.1
