--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ description: NorthSails Smart Wind project for Future Fibers
 
 publish_to: 'none'
 
-version: 1.4.7+257
+version: 1.6.1+261
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -17,22 +17,17 @@ dependencies:
 
   custom_webview:
     path: ./Pugins/custom_webview
-  #  smartwind_login:
-  #    path: ../../smartwind_flutter_packages/smartwind_login
 
   deebugee_plugin:
     path: ../../../../DeeBugee/deebugee_plugin
 
 
   #  firebase------------------------------------------
-  firebase_core: ^2.13.0
-  firebase_crashlytics: ^3.3.1
-  firebase_auth: ^4.6.1
-  firebase_messaging: ^14.6.1
-  firebase_database: ^10.2.1
-  #  firebase_auth_platform_interface: ^6.13.0
-  #  firebase_core_web: ^2.3.0
-  #  --------------------------------------------------
+  firebase_core: ^2.14.0
+  firebase_crashlytics: ^3.3.3
+  firebase_auth: ^4.6.3
+  firebase_messaging: ^14.6.3
+  firebase_database: ^10.2.3
 
 
   flutter_share: 2.0.0
@@ -42,25 +37,24 @@ dependencies:
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
-  dio: ^5.1.2
+  dio: ^5.2.1+1
   percent_indicator: ^4.2.3
   nfc_manager: ^3.2.0
-  shared_preferences: ^2.1.1
+  shared_preferences: ^2.1.2
   animations: ^2.0.7
-  #  jwt_decode: ^0.3.1
-  webview_flutter: ^4.2.0
-  permission_handler: ^10.2.0
+  webview_flutter: ^4.2.2
+  permission_handler: ^10.3.0
   path_provider: ^2.0.15
   hex: ^0.2.0
   package_info_plus: ^3.1.0
-  #  dropdown_search: ^5.0.6
   measured_size: ^1.0.0
   device_information: ^0.0.4
-  device_info: ^2.0.3
+  #  device_info: ^2.0.3
+  device_info_plus: ^4.0.0
   cached_network_image: ^3.2.3
   video_player: ^2.6.1
   group_list_view: ^1.1.1
-  data_table_2: ^2.5.0
+  data_table_2: ^2.5.3
 
 
 
@@ -76,33 +70,26 @@ dependencies:
 
   dotted_border: ^2.0.0+3
   file_picker: ^5.2.7
-  universal_html: ^2.2.1
+  universal_html: ^2.2.3
+  csslib: 0.17.3
   pdfx: ^2.3.0
-  searchfield: ^0.8.0
-  csv: ^5.0.1
+  searchfield: ^0.8.3
+  csv: ^5.0.2
   pdf_render: ^1.3.8
 
-  syncfusion_flutter_pdf: ^21.1.38
-  syncfusion_flutter_charts: ^21.1.38
-  syncfusion_flutter_datepicker: ^21.1.38
-  syncfusion_flutter_sliders: ^21.1.38
-  #  syncfusion_flutter_pdfviewer: ^20.4.50
-  #  syncfusion_pdfviewer_platform_interface: ^20.4.50
+  syncfusion_flutter_pdf: ^21.2.10
+  syncfusion_flutter_charts: ^21.2.10
+  syncfusion_flutter_datepicker: ^21.2.10
+  syncfusion_flutter_sliders: ^21.2.10
 
 
 
   random_password_generator: ^0.2.1
-  #  flutter_slidable: ^2.0.0
   intl: ^0.18.1
   app_settings: ^4.2.0
   contextmenu: ^3.0.0
-  #  badges: ^3.0.3
   just_the_tooltip: ^0.0.12
-  #  url_launcher: ^6.1.10
-
-  #  json_theme: ^4.0.3+2
-  restart_app: ^1.1.2
-  #  pdf_thumbnail: ^0.1.5+1
+  restart_app: ^1.2.1
 
   dart_ping: ^8.0.1
 
@@ -112,15 +99,15 @@ dependencies:
 dev_dependencies:
   dependency_validator: ^3.2.2
   hive_generator: ^2.0.0
-  json_serializable:
-  build_runner: ^2.4.4
+  json_serializable: ^6.7.0
+  build_runner: ^2.4.5
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
   build_web_compilers: ^4.0.3
   flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.7.4
+  dart_code_metrics: ^5.7.5
 
 flutter:
 
