--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind project for Future Fibers
 
 publish_to: 'none'
 
-version: 1.6.2+262
+version: 1.6.6+266
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
@@ -77,10 +77,10 @@ dependencies:
   csv: ^5.0.2
   pdf_render: ^1.3.8
 
-  syncfusion_flutter_pdf: ^21.2.10
-  syncfusion_flutter_charts: ^21.2.10
-  syncfusion_flutter_datepicker: ^21.2.10
-  syncfusion_flutter_sliders: ^21.2.10
+  syncfusion_flutter_pdf: ^22.1.34
+  syncfusion_flutter_charts: ^22.1.34
+  syncfusion_flutter_datepicker: ^22.1.34
+  syncfusion_flutter_sliders: ^22.1.34
 
 
 
@@ -133,6 +133,7 @@ flutter:
     - assets/noResult.png
     - assets/noResult111.jpg
     - assets/QACheckList.json
+    - assets/qc_passed_sticket.jpg
     - assets/rf/rf.js
     - assets/sample.pdf
     - assets/smartwindlogo.png
