--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind project for Future Fibers
 
 publish_to: 'none'
 
-version: 1.6.6+266
+version: 1.6.7+267
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
 
   custom_webview:
-    path: ./Pugins/custom_webview
+    path: ./Plugins/custom_webview
 
   deebugee_plugin:
     path: ../../../../DeeBugee/deebugee_plugin
@@ -49,25 +49,17 @@ dependencies:
   package_info_plus: ^3.1.0
   measured_size: ^1.0.0
   device_information: ^0.0.4
-  #  device_info: ^2.0.3
   device_info_plus: ^4.0.0
   cached_network_image: ^3.2.3
   video_player: ^2.6.1
   group_list_view: ^1.1.1
   data_table_2: ^2.5.3
-
-
-
   json_annotation: ^4.8.1
-
-
   hive: ^2.2.3
   uuid: ^3.0.7
-
   splash_screen_view: ^3.0.0
   decorated_icon: ^1.2.1
   timeline_tile: ^2.0.0
-
   dotted_border: ^2.0.0+3
   file_picker: ^5.2.7
   universal_html: ^2.2.3
@@ -76,13 +68,10 @@ dependencies:
   searchfield: ^0.8.3
   csv: ^5.0.2
   pdf_render: ^1.3.8
-
   syncfusion_flutter_pdf: ^22.1.34
   syncfusion_flutter_charts: ^22.1.34
   syncfusion_flutter_datepicker: ^22.1.34
   syncfusion_flutter_sliders: ^22.1.34
-
-
 
   random_password_generator: ^0.2.1
   intl: ^0.18.1
@@ -101,13 +90,15 @@ dev_dependencies:
   hive_generator: ^2.0.0
   json_serializable: ^6.7.0
   build_runner: ^2.4.5
+  build_web_compilers: ^4.0.3
+  flutter_lints: ^2.0.1
+  dart_code_metrics: ^5.7.5
+
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  build_web_compilers: ^4.0.3
-  flutter_lints: ^2.0.1
-  dart_code_metrics: ^5.7.5
+
 
 flutter:
 
